# gigawatt

./: CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
src/: command.rs  gfx.rs  help.rs  init.rs  main.rs  prompt.rs  repo.rs  utils.rs
src/gfx/: colors.rs  osc.rs  text.rs
src/help/: debug.rs  guide.rs  please.rs
src/utils/: env.rs  path.rs  version.rs
