[package]
name = "gigawatt"
description = "An opinionated theme-aware shell prompt"
authors = ["Juuso Salonen"]
homepage = "https://radiosilenceapp.com/gigawatt/"
repository = "https://github.com/juuso/gigawatt"
license = "MIT"
version = "0.1.1"
edition = "2024"

[dependencies]
git2 = { version = "0.20.2", default-features = false, features = [
    "vendored-libgit2",
] }
nix = { version = "0.30", features = ["term"] }

[dev-dependencies]
tempfile = "3.22.0"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
