[package]
name = "gigawatt"
description = "An opinionated theme-aware shell prompt"
authors = ["Juuso Salonen"]
homepage = "https://radiosilenceapp.com/gigawatt/"
repository = "https://github.com/juuso/gigawatt"
license = "MIT"
version = "0.1.1"
edition = "2024"

[dependencies]
nix = { version = "0.30", features = ["term"] }
gix = { version = "0.73", default-features = false, features = [
    "status",
    "parallel",
    "max-control",
] }

[dev-dependencies]
tempfile = "3.22.0"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
